# ChamplainTechJournals

./: CA.drawio  NetworkDiagram.drawio  README.md  SUMMARY.md  Untitled Diagram.drawio  lab-11-cms.md  lab-11-wordpress-on-linux.md  lab01-environment-setup.md  lab02-dns+adds-role.md  lab03-linux.md  lab06-midterm.md  lab07-lab-server-core-and-remote-administrator-tools.md  lab08-apache.md  lab08.5-configure-windows-dhcp-server.md  lab10-powershell.md  lab12-automation.md  lab13-wordpress-on-windows-server.md  lab13-wordpress-on-windows.md  sys255-lab-11-wordpress-on-linux.md  sys255-lab05-adds-and-group-policy.md  sys255-lab09-bash-scripting.md
SYS320-main/: README.md
adv-topics-sec480/: 01-Bare_Metal_ESXI_Setup.md  05-480Utils.md  480-driver.ps1  480.json  Bare Metal ESXI Setup  Bare Metal ESXI Setup.md  README  README.md  final-decommision.md  milestone6.md  milestone7.md  milestone8.md  milestone9.md  rhel-sealer.sh  vcenter-clionly.md
automation-sys320/: README.md
db-security-sec300/: README.md  week1.md  week2.md  week3.md  week4.md  week5.md
draw_io/: SEC260-CA.drawio  Untitled Diagram.drawio
eth-hack-sec335/: 11.1-metasploit-basics.md  README.md  SQLi.md  arwen.md  dns-resolver.sh  final.md  gandalf.md  gloin.md  linux-permission-vulnerabilities.md  metasploit.md  nmap.md  (+6 more)
python-csi160/week02/Week-2Practice-Problems/: .gitignore  part1.md  part1.py  part2.md  part2.py  part3.md  part3.py  part4.md  part4.py  part5.md  part5.py  part6.md  part6.py  part7.md  part7.py  pyproject.toml
python-csi160/week02/Week-2Practice-Problems/tests/: run_test.py
(+398 files in other folders)
